// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchButton renders correctly 1`] = `
<DocumentFragment>
  .cache-3dhp9y {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 1px;
  padding: 16px;
  -webkit-transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 22px;
  position: relative;
  font-weight: 500;
  cursor: pointer;
}

.cache-3dhp9y[aria-checked='true'] {
  cursor: auto;
  color: #4f0599;
  border-color: #4f0599;
}

.cache-3dhp9y:hover,
.cache-3dhp9y:focus {
  color: #b2b6c3;
  border-color: #4f0599;
}

.cache-3dhp9y:hover {
  box-shadow: 0 0 8px 2px #eeeeff;
}

.cache-3dhp9y:focus {
  box-shadow: 0 0 1px 2px rgba(79,5,153,0.25);
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

<label
    aria-checked="false"
    class="e16krxq01 cache-3dhp9y"
    for="radio-choice"
  >
    Choice
    <input
      aria-checked="false"
      class="cache-cujed6 e16krxq00"
      id="radio-choice"
      name="radio"
      tabindex="0"
      type="radio"
      value="choice"
    />
  </label>
</DocumentFragment>
`;

exports[`SwitchButton renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-vrtsao {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 1px;
  padding: 16px;
  -webkit-transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 22px;
  position: relative;
  font-weight: 500;
  cursor: pointer;
  cursor: not-allowed;
  color: #d4dae7;
  background-color: #fafafb;
  border-color: #d4dae7;
  pointer-events: none;
}

.cache-vrtsao[aria-checked='true'] {
  cursor: auto;
  color: #4f0599;
  border-color: #4f0599;
}

.cache-vrtsao[aria-checked='true'] {
  color: #d4dae7;
  border-color: #d4dae7;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

<label
    aria-checked="false"
    class="e16krxq01 cache-vrtsao"
    disabled=""
    for="radio-choice"
  >
    Choice
    <input
      aria-checked="false"
      aria-disabled="true"
      class="cache-cujed6 e16krxq00"
      disabled=""
      id="radio-choice"
      name="radio"
      style="pointer-events: none;"
      type="radio"
      value="choice"
    />
  </label>
</DocumentFragment>
`;

exports[`SwitchButton renders correctly with complex child 1`] = `
<DocumentFragment>
  .cache-vrtsao {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 1px;
  padding: 16px;
  -webkit-transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 22px;
  position: relative;
  font-weight: 500;
  cursor: pointer;
  cursor: not-allowed;
  color: #d4dae7;
  background-color: #fafafb;
  border-color: #d4dae7;
  pointer-events: none;
}

.cache-vrtsao[aria-checked='true'] {
  cursor: auto;
  color: #4f0599;
  border-color: #4f0599;
}

.cache-vrtsao[aria-checked='true'] {
  color: #d4dae7;
  border-color: #d4dae7;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

<label
    aria-checked="true"
    class="e16krxq01 cache-vrtsao"
    disabled=""
    for="radio-choice"
  >
    true true
    <input
      aria-checked="true"
      aria-disabled="true"
      checked=""
      class="cache-cujed6 e16krxq00"
      disabled=""
      id="radio-choice"
      name="radio"
      style="pointer-events: none;"
      type="radio"
      value="choice"
    />
  </label>
</DocumentFragment>
`;

exports[`SwitchButton renders correctly with variant segment 1`] = `
<DocumentFragment>
  .cache-131746z {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 1px;
  padding: 16px;
  -webkit-transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 22px;
  position: relative;
  font-weight: 500;
  cursor: pointer;
  font-size: 14;
  height: 40px;
  -webkit-transition: none;
  transition: none;
  border-radius: 4px;
  box-shadow: none;
}

.cache-131746z[aria-checked='true'] {
  cursor: auto;
  color: #4f0599;
  border-color: #4f0599;
}

.cache-131746z:hover,
.cache-131746z:focus {
  color: #b2b6c3;
  border-color: #4f0599;
}

.cache-131746z:hover {
  box-shadow: 0 0 8px 2px #eeeeff;
}

.cache-131746z:focus {
  box-shadow: 0 0 1px 2px rgba(79,5,153,0.25);
}

.cache-131746z:hover,
.cache-131746z:focus {
  box-shadow: none;
  border-color: transparent;
  color: #4a4f62;
}

.cache-131746z[aria-checked='true'] {
  background-color: #4f0599;
  color: #fff;
}

.cache-131746z[aria-checked='true']:hover {
  color: #fff;
}

.cache-131746z[aria-checked='false'] {
  background-color: white;
  color: #4a4f62;
  border-color: transparent;
}

.cache-131746z[aria-checked='false']:hover,
.cache-131746z[aria-checked='false']:focus {
  color: #4a4f62;
  border-color: transparent;
  box-shadow: none;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

<label
    aria-checked="false"
    class="e16krxq01 cache-131746z"
    for="radio-choice"
  >
    Choice
    <input
      aria-checked="false"
      class="cache-cujed6 e16krxq00"
      id="radio-choice"
      name="radio"
      tabindex="0"
      type="radio"
      value="choice"
    />
  </label>
</DocumentFragment>
`;
